--- a/Mid-Term/Mid-Term.vcxproj.filters
+++ b/Mid-Term/Mid-Term.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="VkCore_Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
