--- a/Mid-Term/Mid-Term.vcxproj
+++ b/Mid-Term/Mid-Term.vcxproj
@@ -291,7 +291,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <IncludePath>$(SolutionDir)lib\glfw-3.3.4.bin.WIN32\include;$(SolutionDir)lib\glew-2.1.0\include;$(SolutionDir)lib\glm-0.9.9.7;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)lib\glew-2.1.0\include;$(SolutionDir)lib\glm-0.9.9.7;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)lib\glew-2.1.0\lib\Release\Win32;$(SolutionDir)lib\glfw-3.3.4.bin.WIN32\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -529,7 +529,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(VULKAN_SDK)/Lib/vulkan-1.lib;opengl32.lib;glew32.lib;glfw3dll.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies);opengl32.lib;glew32.lib;glfw3dll.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>…\dependencies\glfw-3.1.2.bin.WIN64\lib-vc2013;..\lib\assimp\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\lib\assimp\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
       <Command>%VULKAN_SDK%/Bin/glslc.exe ../shaders/shader.vert -o ../shaders/vert.spv
@@ -572,8 +572,8 @@ copy "$(SolutionDir)lib\glew-2.1.0\bin\Release\Win32\glfw32.dll" "$(TargetDir)gl
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(VULKAN_SDK)/Lib/vulkan-1.lib;opengl32.lib;glfw3dll.lib;glew32.lib;assimp-vc142-mt.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>…\dependencies\glfw-3.1.2.bin.WIN64\lib-vc2013;..\lib\assimp\lib\release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(VULKAN_SDK)/Lib/vulkan-1.lib;opengl32.lib;glfw3dll.lib;glew32.lib;assimp-vc142-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\lib\assimp\lib\release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PreBuildEvent>
       <Command>%VULKAN_SDK%/Bin/glslc.exe ../shaders/shader.vert -o ../shaders/vert.spv
